Sun Oct 12 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htdig/{Retriever,Server}.cc: Back out the previous.
      Gilles pointed out inconsistency with Retriever::IsValidURL().

Sun Oct  5 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htdig/{Retriever,Server}.cc: Jim Cole's patch to bug #765726.
      Don't block paths with subpaths excluded by robots.txt.

Sun Oct  5 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htsearch/htsearch.cc: Highlight phrases containing stop words
    * test/t_htsearch, test/conf/htdig.conf.in:  Tests for the above

Sat Sep 27 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * test/{test_functions.in,t_htdig,t_htdig_local,t_htnet}:
      Don't assume shell "." command passes arguments.  (Doesn't on FreeBSD.)

Sat Sep 27 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htlib/HtDateTime.h, htnet/HtCookie.cc:
      Avoid ambiguous function call on systems (HP-UX) where  time_t=int
	
Fri Aug 29 09:35:46 MDT 2003 Neal Richter <nealr@rightnow.com>

    * removed references to CDB___mp_dirty_level ,CDB_set_mp_diry_level() 
        &  CDB_get_mp_diry_level()

    * The config verb 'wordlist_cache_dirty_level' was left for possible use in
      the future.

Thu Aug 28 15:11:21 MDT 2003 Neal Richter <nealr@rightnow.com>

    * Changed db/LICENSE file to new LGPL compatible license from Sleepycat
      Software -- Thanks Sleepycat!

    * Reverted to Revision 1.2 or db/mp_alloc.c  The recent changed cuased
      large DB growth.  Strangely the files contained no 'new' data, they were
      just much larger.  Looks like the pages were being flushed too often????

Thu Aug 28 12:41:22 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * global: updated with 'autoreconf -if' (autoconf 2.57, libtool 1.5.0a and
      automake 1.7.6)
    * 'make check' successful on: AMD64 Linux 2.4, Alpha Linux 2.2,
      RedHat Linux 7.3 (2.4), SPARC Ultra60 Linux 2.4,
      Sparc R220 Sun Solaris (5.8).